--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@
   flex-direction: column;
   margin: 5px;
 }
+
+.user_line {
+  display: flex;
+  flex-direction: row;
+}
+
+.key,
+.first_name,
+.last_name {
+  display: flex;
+  flex-direction: row;
+}
